# src/main/java/br/com/cooperativevoting/api/dto/request/SessaoVotacaoRequest.java
@@ -1,0 +1,10 @@
+package br.com.cooperativevoting.api.dto.request;
+
+import jakarta.validation.constraints.Positive;
+
+public record SessaoVotacaoRequest(
+
+        @Positive(message = "duracaoSegundos deve ser positivo")
+        Integer duracaoSegundos
+) {
+}
